--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,23 @@
-.files input[type='file'] {
-    outline: 2px dashed #92b0b3;
-    outline-offset: -10px;
-    -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
-    transition: outline-offset .15s ease-in-out, background-color .15s linear;
-    padding: 120px 0 120px 0;
+.files{
+    padding: 120px 0 80px 0;
     text-align: center !important;
-    margin: 0 auto;
-    width: 100% !important;
+    border: 2px dashed #92b0b3;
+    width: 100%;
 }
 
-.files input[type='file']:focus {
-    outline: 2px dashed #92b0b3;
-    outline-offset: -10px;
-    -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
-    transition: outline-offset .15s ease-in-out, background-color .15s linear;
-    border: 1px solid #92b0b3;
+.files .file-input {
+    cursor: pointer;
+    background-color: #f7f7f9;;
+    font-size: 1.25em;
+    font-weight: 700;
+    color: #919aa1;
+    padding: 10px 10px;
+}
+
+.files input[type='file'] {
+    display: none;
+    z-index: -1;
+    overflow: hidden;
 }
 
 .files {
@@ -35,10 +38,6 @@
     margin: 0 auto;
     background-size: 100%;
     background-repeat: no-repeat;
-}
-
-.color input[type='file'] {
-    background-color: #f1f1f1;
 }
 
 .files:before {
