--- a/views/layout.twig
+++ b/views/layout.twig
@@ -12,9 +12,21 @@
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/gallery">Stormbox</a>
+        <a class="navbar-brand" href="/">Stormbox</a>
     </nav>
 </header>
+
+{% if flash('success') %}
+    <div class="alert alert-success">
+        {{ flash('success') }}
+    </div>
+{% endif %}
+
+{% if flash('error') %}
+    <div class="alert alert-danger">
+        {{ flash('error') }}
+    </div>
+{% endif %}
 
 {% block body %}
 {% endblock %}
