--- a/views/layout.twig
+++ b/views/layout.twig
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <title>{% block title "Stormbox" %}</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
